--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gzticc.pincommon">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".global.PinCommonApplication"
         android:allowBackup="true"
@@ -30,6 +33,7 @@
             </intent-filter>-->
 
         </activity>
+        <activity android:name=".ui.activity.GlideActivity"/>
 
     </application>
 
